--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jest": "^26.4.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda": "^1.111.0",
+    "@aws-cdk/aws-s3": "^1.111.0",
     "@aws-cdk/core": "1.111.0"
   }
 }
